fixes the footer among other layout issues

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -11,11 +11,11 @@ html {
 
 html {
   min-height: 100%;
-  position: relative;
 }
 
 body {
   height: 100%;
+  position: relative;
 }
 
 header {
@@ -92,7 +92,7 @@ div.centercontent {
 /* section.newscontent is only the news section */
 
 section.newscontent {
-  display: flex;
+  display: inline-flex;
   flex-wrap: wrap;
   flex-direction: column;
   width: 60%;
@@ -117,13 +117,13 @@ p.italic {
  /* Aside code */
 
 aside.catspotlight {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+  display: inline-flex;
   flex-wrap: wrap;
-  max-width: 16%;
+  max-width: 25%;
+  min-width: 20%;
   border: 1px solid black;
   justify-content: space-around;
+
 }
 
 aside.catspotlight div {
@@ -133,17 +133,22 @@ aside.catspotlight div {
 }
 
 aside.catspotlight div p {
-  align-items: flex-start;
+  justify-content: flex-start;
 }
 
 aside.catspotlight div a {
   color: red;
-  margin-bottom: 1rem;
+  margin-bottom: 0.2rem;
+  justify-content: flex-end;
 }
 
 aside.catspotlight div h2 {
   font-size: 1.8rem;
   margin-bottom: 0.6rem;
+}
+
+aside.catspotlight div img {
+  min-width: 20%;
 }
 
 div h3 {
@@ -156,16 +161,16 @@ html {
 
 footer {
   background-color: black;
-  position: fixed;
-  bottom: 0rem;
+  position: absolute;
+  bottom: auto;
   width: 100%;
   height: 11rem;
-  margin-bottom: 0rem;
-  margin-top: 15rem;
+  padding-bottom: 3rem;
+  margin-top: 3rem;
 }
 
 footer div ul.contact {
-  padding: 1.2rem;
+  padding-top: 1.2rem;
 }
 
 ul.contact li{
@@ -226,7 +231,7 @@ div.catprofiles {
   display: flex;
   flex-direction: column;
   min-height: 100%;
-  padding-bottom: 11rem;
+  padding-bottom: 2rem;
 }
 
 div.catprofiles article {
@@ -239,7 +244,6 @@ div.catprofiles article h2 {
   font-weight: lighter;
   color: cornflowerblue;
   font-style: italic;
-  margin-bottom: 0rem;
 }
 
 div.descriptionandbutton p {
@@ -252,5 +256,5 @@ div.descriptionandbutton p {
 .catphoto {
   border: 0.1rem solid #ddd;
   padding: 0.5rem;
-  margin: 0.5rem 1.5rem 1rem 1rem;
+  margin: 0.5rem 1rem 1rem 1rem;
 }
